--- a/index.html
+++ b/index.html
@@ -5023,7 +5023,7 @@
                     ><br />
                     <iframe
                       title="Highlights Video: NRN Day Celebration, Annual General Meeting and Global Conclave 2024"
-                      data-src="https://www.youtube.com/embed/F34dan6vOHQ"
+                      data-src="https://www.youtube.com/shorts/LQdYXWSzocA"
                       width="780"
                       height="420"
                       frameborder="0"
